--- a/index.html
+++ b/index.html
@@ -26,38 +26,44 @@
             <p class="secondaryText">This Website has some Subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             <button class="heroButton">Sign up</button>
         </div>
-        <div class="heroImg"><img src="IndoorCover.png" alt="The cover of the song 'Indoor' produced by Faceless"></div>
+        <div><img class="heroImg" src="IndoorCover.png" alt="The cover, created by 'europiss', of the song 'Indoor'"></div>
     </div>
 <!--Third part-->
-    <div>
-        <p>Some random information</p>
-        <div>
-            <div>rounded box</div>
-            <p>This is some subtext under an illustration or image</p>
-        </div>
-        <div>
-            <div>rounded box</div>
-            <p>This is some subtext under an illustration or image</p>
-        </div>
-        <div>
-            <div>rounded box</div>
-            <p>This is some subtext under an illustration or image</p>
-        </div>
-        <div>
-            <div>rounded box</div>
-            <p>This is some subtext under an illustration or image</p>
+    <div class="information">
+        <div class="infoHeading"><p>Some random information.</p></div>
+        <div class="infoBoxes">
+            <div class="eachBox">
+                <div class="roundedBox"></div>
+                <p class="infoText">This is some subtext under an illustration or image</p>
+            </div>
+            <div class="eachBox">
+                <div class="roundedBox"></div>
+                <p class="infoText">This is some subtext under an illustration or image</p>
+            </div>
+            <div class="eachBox">
+                <div class="roundedBox"></div>
+                <p class="infoText">This is some subtext under an illustration or image</p>
+            </div>
+            <div class="eachBox">
+                <div class="roundedBox"></div>
+                <p class="infoText">This is some subtext under an illustration or image</p>
+            </div>
         </div>
     </div>
 <!--Fourth part-->
-    <div>
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows ? All I know is that it looks nice</p>
-        <p>Thor, God of Thunder</p>
+    <div class="quoteContainer">
+        <div class="quoteTextCont"><p class="quoteText"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it. Who knows ? All I know is that it looks nice</em></p></div>
+        <p class="quoteAuthor">-Thor, God of Thunder</p>
     </div>
 
-    <div>
-        <p>Call to Action! It's time!</p>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button>Sign up</button>
+    <div class="signUpContainer">
+        <div class="signUp">
+            <div class="signUpText">
+                <p><b>Call to Action! It's time!</b></p>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="signUpButton">Sign up</button>
+        </div>
     </div>
 
     <footer>
